--- a/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.html
+++ b/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.html
@@ -1,7 +1,7 @@
-<mat-card class="remotes-panel" [ngClass]="variant + '-remotes-panel'">
+<mat-card class="remotes-panel" [ngClass]="panelClass">
   <mat-card-header class="remotes-header">
     <mat-card-title class="panel-title-content">
-      <mat-icon [svgIcon]="icon" [ngClass]="variant + '-icon'"></mat-icon>
+      <mat-icon [svgIcon]="icon" [ngClass]="iconClass"></mat-icon>
       <span>{{ title }}</span>
       <span class="remote-count">{{ count }}</span>
     </mat-card-title>
@@ -12,26 +12,14 @@
       @for (remote of remotes; track remote.remoteSpecs.name) {
         <app-remote-card
           [remote]="remote"
-          [variant]="getCardVariant(remote)"
           [mode]="mode"
-          [iconService]="iconService"
           [actionState]="getActionState(remote.remoteSpecs.name)"
-          [showOpenButton]="shouldShowOpenButton(remote)"
           [primaryActionLabel]="primaryActionLabel"
           [activeIcon]="activeIcon"
-          [primaryActions]="remote.primaryActions"
           (remoteClick)="onRemoteSelected($event)"
           (openInFiles)="onOpenInFiles($event)"
-          (mountAction)="startJob.emit({ type: 'mount', remoteName: $event })"
-          (unmountAction)="stopJob.emit({ type: 'mount', remoteName: $event })"
-          (syncAction)="startJob.emit({ type: 'sync', remoteName: $event })"
-          (copyAction)="startJob.emit({ type: 'copy', remoteName: $event })"
-          (stopSyncAction)="stopJob.emit({ type: 'sync', remoteName: $event })"
-          (stopCopyAction)="stopJob.emit({ type: 'copy', remoteName: $event })"
-          (moveAction)="startJob.emit({ type: 'move', remoteName: $event })"
-          (bisyncAction)="startJob.emit({ type: 'bisync', remoteName: $event })"
-          (stopMoveAction)="stopJob.emit({ type: 'move', remoteName: $event })"
-          (stopBisyncAction)="stopJob.emit({ type: 'bisync', remoteName: $event })"
+          (startJob)="startJob.emit($event)"
+          (stopJob)="stopJob.emit($event)"
         ></app-remote-card>
       }
     </div>
