fix: resolve issues with remote configuration saving and editing, improve dynamic field handling

--- a/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.html
+++ b/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.html
@@ -95,6 +95,7 @@
               [mountTypes]="mountTypes"
               [currentRemoteName]="getRemoteName()"
               [isNewRemote]="!editTarget"
+              [getControlKey]="getUniqueControlKey.bind(this)"
               (sourceFolderSelected)="handleSourceFolderSelect(flagType)"
               (destFolderSelected)="handleDestFolderSelect(flagType)"
             />
