--- a/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
+++ b/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
@@ -138,7 +138,10 @@
       @if (field.type === 'dynamic-fields') {
         <ng-container formGroupName="options">
           @for (field of this.dynamicFlagFields; track field.Name) {
-            <app-setting-control [option]="field" [formControlName]="field.Name">
+            <app-setting-control
+              [option]="field"
+              [formControlName]="getControlKey(flagType, field)"
+            >
             </app-setting-control>
           }
         </ng-container>
